Fix a problem with Safri for auto margin Left/Right inside a flex vertical container. Now the last item of location section it's a flex horizontal container with inside only a div element with two links. This configuration it's visible only on mobile.

--- a/WebComponent/www/public_html/styles/main.css
+++ b/WebComponent/www/public_html/styles/main.css
@@ -1890,9 +1890,9 @@ hr{
 .map{
    height: 100%;
    margin: 22px 10px 8px 65px;
-   /*-webkit-transform: scale(0.3,0.3);
+   -webkit-transform: scale(0.3,0.3);
    transform: scale3d(0.3,0.3,1.0);
-   opacity: 0.01;*/
+   opacity: 0.01;
    position: relative;
 }
 .map.active {
@@ -2375,10 +2375,8 @@ a:hover > .act-circ{
 }
 .photo-crop {
     background-repeat:no-repeat;
-    position: absolute;
+    position: relative;
     background-attachment: fixed;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
 }
 .photo-crop .paper-fab.fit {
    top: 405px;
@@ -2460,7 +2458,7 @@ a:hover > .act-circ{
    -webkit-transition: opacity 200ms ease-out;
    transition: opacity 200ms ease-out;
    position: relative;
-   z-index:1;
+   z-index:10;
 }
 .picture-frame.hidden{
     opacity: 0;
@@ -2952,13 +2950,6 @@ li{
 @media only screen and (min-width: 1700px){
     .grid_outer{
         max-width: 1080px;
-    }
-    .section-base .photo-crop .photo-container{
-        height: 700px;
-    }
-    .photo-crop .paper-fab.fit {
-        top: 583px;
-        left: 42%;
     }
     .picture-frame{
         width: 501px;
